<resources>
    <string name="app_name">Facetendance</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="re_password">Re-Password</string>
    <string name="already_registered_sign_in_here">Already registered ? Sign In here</string>
    <string name="facetendance">Facetendance</string>
    <string name="term_service"><![CDATA[Term & Service]]></string>
    <string name="contact_us">Contact us</string>
    <string name="profile">Profile</string>
    <string name="check_attendance">Check Attendance</string>
    <string name="class_look_up">Class look up</string>
    <string name="course_manage">Course manage</string>
    <string name="support">Support</string>
    <string name="sign_out">Sign out</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
