<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/facetendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/facetendance"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="99dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableEnd="#073b4c"
        android:drawableStart="@drawable/ic_action_email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="166dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/sign_btn"
        android:layout_width="143dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/emailField"
        android:layout_marginBottom="211dp"
        android:background="@color/colorPrimary"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_btn"
        android:layout_width="305dp"
        android:layout_height="57dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="125dp">

    </com.google.android.gms.common.SignInButton>

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/emailField"
        android:layout_alignParentTop="true"
        android:layout_marginTop="221dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="143dp"
        android:layout_height="46dp"
        android:layout_alignEnd="@+id/emailField"
        android:layout_alignTop="@+id/sign_btn"
        android:background="#00c300"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/term_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="52dp"
        android:layout_marginStart="66dp"
        android:text="@string/term_service"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/term_service"
        android:layout_marginEnd="66dp"
        android:text="@string/contact_us"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>