<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/emailsignupField"
        android:layout_width="247dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:drawableEnd="@color/colorPrimary"
        android:drawableStart="@drawable/ic_action_email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/passwordsignupField"
        android:layout_width="247dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="152dp"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/repasswordsignupField"
        android:layout_width="247dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="221dp"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="248dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="177dp"
        android:background="@color/colorPrimary"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/signinhere"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/emailsignupField"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="139dp"
        android:text="@string/already_registered_sign_in_here"
        android:textColor="@color/colorPrimary" />


</RelativeLayout>